recursion.hanoi.InterleavedHanoi.scala.error
Erreur de compilation :
InterleavedHanoi:7: error: not found: value interleaveHanoi
    interleaveHanoi(height-1,src1,src2,dst,other)
    ^InterleavedHanoi:9: error: not found: value interleaveHanoi
      interleaveHanoi(height-1,other,src1,src2,dst)
      ^