recursion.hanoi.InterleavedHanoi.scala.code
def interleavedHanoi(height:Int, src1:Int, src2:Int, other:Int, dst:Int) {
  if (height == 1){
    deplace(src1,dst)
  }
  else{
    interleaveHanoi(height-1,src1,src2,dst,other)
      deplace(src1,dst)
      interleaveHanoi(height-1,other,src1,src2,dst)
  }
  }